# ArtRefCollector

./: AGENT_PROMPT.md  README.md  REQUIREMENTS.md  SETUP_GUIDE.md  WORKFLOW.md  assign_categories.py  batch_search.py  config.py  import_s3_board.py  pyproject.toml  run.py  scrape_images.py  tmp_s3_setting.txt
analyze/: board_analyzer.py  board_composer.py  board_ranker.py  pixel_metrics.py  reference_planner.py  setting_parser.py  vision_tagger.py  vlm_metrics.py
dedup/: clip_dedup.py  phash_dedup.py
display/: gallery_generator.py
download/: download_factory.py  downloader.py  gallery_dl_downloader.py  img2dataset_fallback.py
gallery/: canvas.html
models/: __init__.py  categories.py  schemas.py  source_quality.py
search/: duckduckgo_searcher.py  search_factory.py  searxng_searcher.py
serve/: board_api.py
store/: database.py  embedding_utils.py  file_manager.py  lancedb_index.py  vector_index.py  vector_store_factory.py
