[project]
name = "art-ref-collector"
version = "0.3.0"
description = "Art reference image collector with metric analysis and infinite canvas gallery"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckduckgo-search>=7.0.0",
    "httpx>=0.28.0",
    "pillow>=11.0.0",
    "imagehash>=4.3.2",
    "numpy>=2.0.0",
    "scipy>=1.14.0",
    "torch>=2.0.0",
    "transformers>=4.40.0",
    "open-clip-torch>=2.24.0",
    "faiss-cpu>=1.8.0",
    "jinja2>=3.1.0",
    "tqdm>=4.66.0",
    "pydantic>=2.0.0",
    "gallery-dl>=1.27.0",
    "img2dataset>=1.42.0",
    "lancedb>=0.6.0",
]
